fix: AI controller updated to match service